bin/testsuite/tests/compiler/src/errors/compiler4009.swg
#global testerror "Err0099"

#test
{
    for 4 do
        break to TOTO
}
